force-app/main/default/objects/Plan_Type_Code_Set__c/Plan_Type_Code_Set__c.object-meta.xml
<CustomObject>
    <label>Plan Type Code Set</label>
    <nameField>
        <label>Plan Type Code Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Type Code Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>