force-app/main/default/objects/Plan_Type_Code_Set__c/fields/Code_Set__c.field-meta.xml
<CustomField>
    <fullName>Code_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Set</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Plan Type Code Sets</relationshipLabel>
    <relationshipName>Plan_Type_Code_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>