force-app/main/default/objects/Plan_Type_Code_Set__c/fields/Omni_Process__c.field-meta.xml
<CustomField>
    <fullName>Omni_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Omni Process</label>
    <referenceTo>OmniProcess</referenceTo>
    <relationshipLabel>Plan Type Code Sets</relationshipLabel>
    <relationshipName>Plan_Type_Code_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>